--- a/team.html
+++ b/team.html
@@ -30,24 +30,26 @@
         <div class="row">
             <div class="col">
                 <div class="indvidual_photo">
-                    <img src="images/photo_Kariya-san30.png" class="img-fluid">
+                    <img src="images/photo_Kariya-san.png" class="img-fluid">
                 </div>
             </div>
             <div class="col">
-                Name: Miki Kariya<br>
-                Role: Leader, Robot design<br>
-                University: Nara Institute of Science and Technology<br>
-                Major: Graduate School of Science and Technology<br>
+                <p>Name: Miki Kariya<br>
+                    Role: Leader, Robot design<br>
+                    University: Nara Institute of Science and Technology<br>
+                    Major: Graduate School of Science and Technology<br>
+                </p>
             </div>
         </div>
     </div>
     <div class="container kakomi-box3">
         <div class="row">
             <div class="col">
-                Name: Takumi Nishida<br>
-                Role:Experiment<br>
-                University:Kansai University<br>
-                Major: Faculty of Chemistry, Materials and Bioengineering<br>
+                <p>Name: Takumi Nishida<br>
+                    Role:Experiment<br>
+                    University:Kansai University<br>
+                    Major: Faculty of Chemistry, Materials and Bioengineering<br>
+                </p>
             </div>
             <div class="col">
                 <div class="indvidual_photo">
@@ -64,20 +66,22 @@
                 </div>
             </div>
             <div class="col">
-                Name: Yosuke Ochi<br>
-                Role: Simulation, YouTube<br>
-                University: Kyushu Institute of Technology<br>
-                Major: Bioscience and Bioinformatics<br>
+                <p>Name: Yosuke Ochi<br>
+                    Role: Simulation, YouTube<br>
+                    University: Kyushu Institute of Technology<br>
+                    Major: Bioscience and Bioinformatics<br>
+                </p>
             </div>
         </div>
     </div>
     <div class="container kakomi-box3">
         <div class="row">
             <div class="col">
-                Name:<br>
-                Role:<br>
-                University:<br>
-                Major:<br>
+                <p>Name:<br>
+                    Role:<br>
+                    University:<br>
+                    Major:<br>
+                </p>
             </div>
             <div class="col">
                 <div class="indvidual_photo">
@@ -94,24 +98,26 @@
                 </div>
             </div>
             <div class="col">
-                Name:<br>
-                Role:<br>
-                University:<br>
-                Major:<br>
+                <p>Name:<br>
+                    Role:<br>
+                    University:<br>
+                    Major:<br>
+                </p>
             </div>
         </div>
     </div>
     <div class="container kakomi-box3">
         <div class="row">
             <div class="col">
-                Name:<br>
-                Role:<br>
-                University:<br>
-                Major:<br>
+                <p>Name: Yuki Kamiya<br>
+                    Role: Simulation, Wiki design<br>
+                    University: Osaka University<br>
+                    Major: Mechanical Engineering<br>
+                </p>
             </div>
             <div class="col">
                 <div class="indvidual_photo">
-                    <img src="images/yp_aptamer_noaxis.png" class="img-fluid">
+                    <img src="images/photo_Kamiya.png" class="img-fluid">
                 </div>
             </div>
         </div>
@@ -125,14 +131,14 @@
                 </div>
             </div>
             <div class="col">
-                Name:<br>
+                <p>Name:<br></p>
             </div>
         </div>
     </div>
     <div class="container kakomi-box3">
         <div class="row">
             <div class="col">
-                Name:<br>
+                <p>Name:<br></p>
             </div>
             <div class="col">
                 <div class="indvidual_photo">
