--- a/design.html
+++ b/design.html
@@ -56,6 +56,7 @@
             <p>3. DNA-converter which releases Output 2 in accordance of Input 1 (the output of DNA-based transmembrane signaling system)</p>
             <p>When the DNA aptamer detects the quormone, Output 1 is released as a signal, and two transmembrane DNA strands on the giant vesicle (complementary DNA to the respective left and right ends of Output1) are connected via Output 1.<br>
                Inside the transmembrane signalling system across the lipid bilayer, a strand displacement reaction of Input 1 triggered by complexation of the transmission mechanism releases a short DNA strand of about 30 bases as Output 2. Output 2 activates the processor part.</p>
+            <img src="movies/sensor.gif">
         </section>
         <section class="scroll-point" id="area-3">
             <h2>Processor</h2>
@@ -63,6 +64,8 @@
             <p>1. Quormone concentration detection circuit<sup>3)</sup></p>
             <p>2. DNA amplification circuit which produces DNA aptamer<sup>3)</sup></p>
             <p>The concentration detection circuit modifies the end of Output 2 released by the sensor part, and DNA amplification is withheld until a certain threshold is exceeded. When the amount of Output 2 exceeds the threshold, the concentration detection circuit overflows, which activates the DNA amplification circuit, and the mass synthesis of aptamers initiates.</p>
+            <img src="movies/PENtoolboxgif.gif">
+            <img src="movies/drain.gif">
         </section>
         <section class="scroll-point" id="area-4">
             <h2>Actuator</h2>
